# Lambda-Function-with-CloudFormation

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
src/: requirements.txt
src/app/: __init__.py
