[tool.poetry]
name = "fastapi_otp"
version = "0.1.0"
description = ""
authors = ["nictsyen"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
fastapi = "^0.85.0"
pyotp = "^2.7.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
gunicorn = "^20.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
mangum = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
